; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/serf/extr_context.c_serf_error_string.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/serf/extr_context.c_serf_error_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"The connection is closing\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"A request has been lost\00", align 1
@.str.2 = private unnamed_addr constant [50 x i8] c"The connection is blocked, pending further action\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c"An error occurred during decompression\00", align 1
@.str.4 = private unnamed_addr constant [42 x i8] c"The server sent an improper HTTP response\00", align 1
@.str.5 = private unnamed_addr constant [48 x i8] c"The server sent a truncated HTTP response body.\00", align 1
@.str.6 = private unnamed_addr constant [47 x i8] c"The server unexpectedly closed the connection.\00", align 1
@.str.7 = private unnamed_addr constant [43 x i8] c"An error occurred during SSL communication\00", align 1
@.str.8 = private unnamed_addr constant [43 x i8] c"An SSL certificate related error occurred \00", align 1
@.str.9 = private unnamed_addr constant [40 x i8] c"An error occurred during authentication\00", align 1
@.str.10 = private unnamed_addr constant [55 x i8] c"The requested authentication type(s) are not supported\00", align 1
@.str.11 = private unnamed_addr constant [39 x i8] c"An authentication attribute is missing\00", align 1
@.str.12 = private unnamed_addr constant [48 x i8] c"Initialization of an authentication type failed\00", align 1
@.str.13 = private unnamed_addr constant [68 x i8] c"The proxy server returned an error while setting up the SSL tunnel.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @serf_error_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %19 [
    i32 135, label %5
    i32 133, label %6
    i32 128, label %7
    i32 134, label %8
    i32 136, label %9
    i32 129, label %10
    i32 141, label %11
    i32 130, label %12
    i32 131, label %13
    i32 140, label %14
    i32 137, label %15
    i32 138, label %16
    i32 139, label %17
    i32 132, label %18
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %20

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %20

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %20

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %20

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %20

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %20

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %20

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %20

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %20

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %20

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %20

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %20

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %20

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %20

19:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %20

20:                                               ; preds = %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
